# data_for_paws_no_kill_colorado

./: .gitignore  CODEOWNERS  README.md  cim_rest_api_pipeline.py  convert_duckdb_to_csv.py  dbt_project.yml  duckdb_reverse_etl.py  google_sheets_pipeline.py  pyproject.toml
.dlt/: config.toml  secrets.toml-example
data/: facilities.csv  yearly_shelter_statistics.csv  yearly_statistics_with_facility_data.csv
dbt_nokillcolorado/: .gitignore  dbt_project.yml  packages.yml  profiles.yml
dbt_nokillcolorado/analyses/: generate_model_yml.sql
dbt_nokillcolorado/models/marts/: facilities.sql  facilities.yml  yearly_shelter_statistics.sql  yearly_shelter_statistics.yml
dbt_nokillcolorado/models/source/: source_docs.md
dbt_nokillcolorado/models/source/colorado_information_management/: _cim_source.yml  src_cim__2015_statistics.sql  src_cim__2016_statistics.sql  src_cim__2016_statistics.yml  src_cim__2017_statistics.sql  src_cim__2017_statistics.yml
dbt_nokillcolorado/models/source/google_sheets/: _google_sheets_source.yml  src_google_sheets__2018_statistics.sql  src_google_sheets__2018_statistics.yml  src_google_sheets__2019_statistics.sql  src_google_sheets__2019_statistics.yml  (+7 more)
models/source/colorado_information_management/: src_cim__2015_statistics.sql  src_cim__2015_statistics.yml  src_cim__2016_statistics.sql  src_cim__2017_statistics.sql
models/source/google_sheets/: src_google_sheets__2021_statistics.py  src_google_sheets__2021_statistics.yml  src_google_sheets__2023_statistics.py  src_google_sheets__2023_statistics.yml  src_google_sheets__2024_statistics.yml
