[project]
name = "nokillcolorado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.10.11",
    "dbt-duckdb>=1.9.6",
    "dlt[duckdb]>=1.15.0",
    "google-api-python-client>=2.181.0",
    "pandas>=2.3.2",
    "sodapy>=2.2.0",
]
